<resources>
    <!--<general>-->
    <string name="app_name">F-Project</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="start_game">Start Game</string>
    <string name="highscore">Highscore</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="f_project">F-Project</string>
    <!--<teams>-->
    <string name="team_borussia_dortmund">Borussia Dortmund</string>
    <string name="team_bayern_muenchen">FC Bayern München</string>
    <string name="team_liverpool">Liverpool</string>
    <string name="team_manchester_city">Manchester City</string>
    <string name="team_paris">Paris Saint-Germain</string>
    <string name="team_real_madrid">Real Madrid</string>
    <!--<scenes>-->
    <string name="scene_beginning">It\'s starting! %1s vs %2s</string>
    <string name="scene_ending">Spiel ist vorbei!</string>
    <!--<scenes_shooting>-->
    <string name="scene_shot1">Schuss aus kurzer Entfernung!</string>
    <string name="scene_shot2">Schuss aus einem spitzen Winkel!</string>
    <string name="scene_shot3">Weiter Schuss aus der Distanz!</string>
    <string name="scene_goal_success1">TOR!</string>
    <string name="scene_goal_success2">Ball ist im Netz!</string>
    <string name="scene_goal_fail1">Knapp daneben!! Die Gegner spielen den Ball zurück ins Mittelfeld</string>
    <string name="scene_goal_fail2">Weit am Kasten vorbei!!</string>
    <!--<scenes_attacking>-->
    <string name="scene_attacking1">Der Angreifer %1s setzt sich mit einem Dribble gegen %2s durch und steht jetzt vor dem Tor!</string>
    <string name="scene_attacking2">%1s zieht mit einem schnellen Dribble an %2s vorbei</string>
    <!--<scenes_midfielding>-->
    <string name="scene_pass1">Pass durchs Mittelfeld</string>
    <string name="scene_pass2">Langer Pass in die Spitze</string>
    <string name="scene_pass3">Flanke nach vorne</string>
    <string name="scene_circulating">Der Ball zirkuliert in der Mitte</string>
    <string name="scene_kickoff">Weiter geht\'s! Es steht %1s zu %2s</string>
    <!--<scenes_defending>-->
    <string name="scene_defending1">Ball gerät in den Strafraum …</string>
    <string name="scene_defender_block1">Sauber vom Verteidiger abgeräumt</string>
    <string name="scene_gk_block1">Ball wurde mit einer hervorragenden Glanzleistung des Torwarts pariert!</string>
    <string name="scene_opponent_goal1">Ball ist im Netz, Tor für die Gegner …</string>
    <!--<actions>-->
    <string name="action_penalty">Elfmeter!</string>
    <string name="action_free_kick">Freistoß</string>
    <!--<miscellaneous>-->
    <string name="team_name">Teamname</string>
    <string name="league_name">Leaguename</string>
    <string name="select">Select Teams</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="back">Back</string>
    <string name="matchzusammenfassung">Matchzusammenfassung</string>

</resources>
