<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />

    <TextView
            android:id="@+id/team_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="start"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toStartOf="@id/team_away"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            tools:text="Dortmund" />

    <TextView
            android:id="@+id/team_away"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/team_home"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            tools:text="Bayern" />


    <TextView
            android:id="@+id/game_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="90. Minute"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toStartOf="@id/team_away"
            app:layout_constraintStart_toEndOf="@id/team_home"
            app:layout_constraintTop_toBottomOf="@id/team_home"
            app:layout_constraintVertical_chainStyle="spread" />

    <ImageView
            android:id="@+id/image_home"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/game_clock"
            app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
            android:id="@+id/counter_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/divider"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/image_home" />

    <TextView
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/counter_away"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/counter_home"
            app:layout_constraintTop_toBottomOf="@id/game_clock" />

    <TextView
            android:id="@+id/anima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/avd"
            app:layout_constraintBottom_toTopOf="@id/game_course_title"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
            android:id="@+id/counter_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/divider"
            app:layout_constraintEnd_toStartOf="@+id/image_away"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/divider" />

    <ImageView
            android:id="@+id/image_away"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toTopOf="@id/game_clock"
            app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
            android:id="@+id/game_course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/matchzusammenfassung"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@id/game_course"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/counter_home" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/game_course"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/interaction_one"
            app:layout_constraintTop_toBottomOf="@id/game_course_title" />

    <Button
            android:id="@+id/interaction_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <Button
            android:id="@+id/interaction_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/guideline_end" />

</androidx.constraintlayout.widget.ConstraintLayout>