<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_green_black">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="50dp" />

    <ImageView
            android:id="@+id/team_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:layout_marginTop="@dimen/vertical_margin"
            android:background="@drawable/gradient_black_green"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageButton
            android:id="@+id/previous_button_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/gradient_black_green"
            android:padding="15dp"

            app:layout_constraintEnd_toStartOf="@id/team_name"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/team_logo"
            app:srcCompat="@drawable/ic_navigate_before" />

    <TextView
            android:id="@+id/team_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coming_soon"
            android:orientation="horizontal"
            android:text="@string/team_name"
            android:textAlignment="center"
            android:textColor="@color/colorTextGrey"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/next_button_team"
            app:layout_constraintEnd_toStartOf="@id/next_button_team"
            app:layout_constraintStart_toEndOf="@id/previous_button_team"
            app:layout_constraintTop_toTopOf="@id/next_button_team" />

    <ImageButton
            android:id="@+id/next_button_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/gradient_black_green"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/team_name"
            app:layout_constraintTop_toBottomOf="@+id/team_logo"
            app:srcCompat="@drawable/ic_navigate_next" />

    <TextView
            android:id="@+id/league_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:fontFamily="@font/coming_soon"
            android:orientation="horizontal"
            android:text="@string/league_name"
            android:textAlignment="center"
            android:textColor="@color/colorTextGrey"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/next_button_league"
            app:layout_constraintStart_toEndOf="@id/previous_button_league"
            app:layout_constraintTop_toBottomOf="@id/previous_button_team" />

    <ImageButton
            android:id="@+id/previous_button_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/league_name"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/previous_button_team"
            app:srcCompat="@drawable/ic_navigate_before" />

    <ImageButton
            android:id="@+id/next_button_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/league_name"
            app:layout_constraintTop_toBottomOf="@id/next_button_team"
            app:srcCompat="@drawable/ic_navigate_next" />

    <Button
            android:id="@+id/select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_black_green"
            android:fontFamily="@font/waiting_for_the_sunrise"
            android:paddingHorizontal="@dimen/horizontal_margin"
            android:text="@string/select"
            android:textColor="@color/colorTextGrey"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/league_name2"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/league_name" />

    <ImageButton
            android:id="@+id/previous_button_league2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/previous_button_team2"
            app:layout_constraintEnd_toStartOf="@id/league_name2"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:srcCompat="@drawable/ic_navigate_before" />

    <TextView
            android:id="@+id/league_name2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:fontFamily="@font/coming_soon"
            android:orientation="horizontal"
            android:text="@string/league_name"
            android:textAlignment="center"
            android:textColor="@color/colorTextGrey"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/previous_button_team2"
            app:layout_constraintEnd_toStartOf="@id/next_button_league2"
            app:layout_constraintStart_toEndOf="@id/previous_button_league2" />

    <ImageButton
            android:id="@+id/next_button_league2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/next_button_team2"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/league_name2"
            app:srcCompat="@drawable/ic_navigate_next" />

    <ImageButton
            android:id="@+id/previous_button_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/gradient_black_green"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@id/team_logo2"
            app:layout_constraintEnd_toStartOf="@id/team_name2"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:srcCompat="@drawable/ic_navigate_before" />

    <TextView
            android:id="@+id/team_name2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coming_soon"
            android:orientation="horizontal"
            android:text="@string/team_name"
            android:textAlignment="center"
            android:textColor="@color/colorTextGrey"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/next_button_team2"
            app:layout_constraintEnd_toStartOf="@id/next_button_team2"
            app:layout_constraintStart_toEndOf="@id/previous_button_team2"
            app:layout_constraintTop_toTopOf="@id/next_button_team2" />

    <ImageButton
            android:id="@+id/next_button_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/gradient_black_green"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/team_logo2"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/team_name2"
            app:srcCompat="@drawable/ic_navigate_next" />

    <ImageView
            android:id="@+id/team_logo2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:background="@drawable/gradient_black_green"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

</androidx.constraintlayout.widget.ConstraintLayout>